# TypeWriter

./: CMakeLists.txt  README.md  setup.py  setup.py.in
examples/: CMakeLists.txt  demo.c  demo.cpp  lorem_c.txt  lorem_l.txt  lorem_w.txt
src/: CMakeLists.txt  c_functions.cpp  parsing_functions.cpp  pytypewriter.pyx  typewriter.cpp  typewriter.h
tests/: BasicCase_tests.cpp  CMakeLists.txt  test_runner.cpp
